app/assets/stylesheets/v2/custom.sass
@import modules/base

// TODO: deprecated
#banner
  background: #005d7f

.bread, .crumb
  display: inline-block
  vertical-align: middle
.bread
  max-width: 120px
@media screen and (max-width: 46.875rem)
  .bread, .crumb
    display: none
  .bread:nth-last-child(7)
    visibility: hidden
    position: relative
    width: 10px
    &:after
      visibility: visible
      position: absolute
      top: 2px
      content: '...'
  .bread:nth-last-child(-n+5),
  .crumb:nth-last-child(-n+5),
  .bread:nth-last-child(7),
  .crumb:nth-last-child(6)
    display: inline-block
@media screen and (max-width: 25rem)
  .bread, .crumb
    display: none !important
  .bread:nth-last-child(5)
    visibility: hidden
    position: relative
    width: 10px
    &:after
      visibility: visible
      position: absolute
      top: 2px
      content: '...'
  .bread:nth-last-child(-n+3),
  .crumb:nth-last-child(-n+3),
  .bread:nth-last-child(5),
  .crumb:nth-last-child(4)
    display: inline-block !important

// TODO: deprecated
.feature
  background: image-url('features-sprite.png') no-repeat
  width: 244px
  height: 224px
  margin: 0 auto
  &.personal
    background-position: center -224px
  &.quick
    background-position: center -448px

.feature-card
  display: inline-block
  width: 270px
  .image
    background: image-url('feature-card.png') no-repeat
    height: 200px
  .copy
    text-align: left

#header-offset
  min-height: 43.75rem

#hex
  width: 100%
  height: 838px
  background: image-url('hex-bg.svg') no-repeat
  background-size: 2438px 838px
  background-position: calc(50% + 240px)
  position: absolute
  top: 0
  z-index: -1

#hex-footer
  width: 100%
  height: 375px
  background: image-url('hex-footer.svg') no-repeat
  background-size: 2438px 375px
  background-position: center
  position: absolute
  z-index: -1

#logo-hex
  background: image-url('footer-hex.svg') no-repeat
  width: 32px
  height: 30px

#navbar-logo
  width: 106px
  height: 20px
  background: image-url('logo.svg') no-repeat
  background-size: 106px 20px
  margin-right: auto
  text-indent: 100%
  white-space: nowrap
  overflow: hidden
  &:hover
    opacity: .6
  &.blue
    background: image-url('blue-logo.svg') no-repeat
    @media screen and (max-width: 25rem)
      background: image-url('blue-logo-hex.svg') no-repeat
  @media screen and (max-width: 25rem)
    width: 24px
    height: 20px
    background: image-url('logo-hex.svg') no-repeat
    background-size: 24px 20px

.pagination a
  color: map-get($colors, blue)

@font-face
  font-family: 'Redacted'
  src: font-url('redacted-script-bold.eot') format('eot'), font-url('redacted-script-bold.woff2') format('woff2'), font-url('redacted-script-bold.woff') format('woff'), font-url('redacted-script-bold.otf') format('opentype'), font-url('redacted-script-bold.svg#filename') format('svg')
.redacted
  font-family: 'Redacted' !important

#supporter
  background: image-url('supporters-logos-sprites.png') no-repeat
  background-size: 200px 1500px
  width: 200px
  height: 120px
  &.cast
    background-position: center -15px
  &.big-lottery-fund
    background-position: center -165px
  &.three-sixty-giving
    background-position: center -315px
  &.outlandish
    background-position: center -465px
  &.indigo-trust
    background-position: center -615px
  &.forward-foundation
    background-position: center -765px
  &.neon
    background-position: center -915px
  &.forward-partners
    background-position: center -1065px
  &.forward3d
    background-position: center -1215px
  &.datakind-uk
    background-position: center -1365px

=scale($w, $h, $scale: 1)
  background-size: ($w * $scale) ($h * $scale)
  min-width: ($w * $scale) / 2
  height: ($h * $scale)

#team
  background: image-url('team-sprites.png') no-repeat
  background-size: 320px 142px
  min-width: 160px
  height: 142px
  @media screen and (max-width: 25rem)
    +scale(320px, 142px, $scale: .6)
  &.david
    background-position: left top
  &.suraj
    background-position: right top

// Markdown
// =========================================================================

.markdown
  h1, h2, h3, h4, h5, h6, p, ul
    margin-bottom: 20px
  h1, h2, h3, h4
    font-weight: 300
  a
    color: map-get($colors, blue)
  ul
    list-style: disc
    padding-left: 20px

